fix(wizard): remove wrong margin-right on cancel button

--- a/src/app/wizard/wizard.component.less
+++ b/src/app/wizard/wizard.component.less
@@ -13,9 +13,8 @@
   position: relative;
 }
 .wizard-pf-footer {
-  .wizard-btn {
-    margin-right: 0;
-    &.wizard-btn-no-back {
+  .pfng-wizard-previous-btn {
+    &.pfng-wizard-btn-no-back {
       display: none;
     }
   }
